<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <RelativeLayout
        android:id="@+id/layout_top_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:background="@drawable/ic_back_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/detailtitle"
            android:textSize="17dp"
            android:textColor="#232323"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/layout_top_menu"
        android:background="#979797"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_top_menu"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="19dp"
            >
            <ImageView
                android:id="@+id/iv_income_expense"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/shape_oval"
                android:layout_marginLeft="19.5dp"
                />
            <TextView
                android:id="@+id/txt_income_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="27.5dp"
                android:textColor="#00a99a"
                android:text="@string/deposit"
                android:layout_marginLeft="10.5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="14.5dp"
            >
            <ImageView
                android:layout_width="63dp"
                android:layout_height="63dp"
                android:background="@drawable/img_won"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/txt_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#587bab"
                android:textSize="72dp"
                android:layout_marginLeft="22.5dp"
                android:text="0"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="67.5dp"
            android:background="@drawable/shape_round_rect"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:text="@string/delete"
            />
    </LinearLayout>
</RelativeLayout>